Make show boxes have fixed height and also truncate text contents

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1221,6 +1221,7 @@ label em.optional {
 }
 /*========== Shows page ==========*/
 .show-tour {
+	height: 480px;
   padding: 10px 10px 0; 
   margin-bottom: 20px;
   -webkit-box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.4), 2px 3px 8px rgba(0, 0, 0, 0.2), 2px 3px 15px rgba(0, 0, 0, 0.1);
